correct linters errors

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       Developed by <a href="https://github.com/omarbabou"> Idriss Omar Babou</a>
     </footer>
 
-    <script defer src="scripts/index.js" type="module"></script>
-    <script defer src="scripts/main.js"></script>
+    <script src="scripts/index.js" type="module"></script>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
